<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simple_rose"
    tools:context=".ui.NewAccount">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@drawable/ic_waveupper_blue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/new_account"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_lock_black_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/dark_blue"
                android:fontFamily="serif"
                android:text="@string/picture"
                android:textColor="@color/blue_games"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <ImageView
                android:id="@+id/image_view_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/ic_person_add_black_24" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_lock_black_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/dark_blue"
                android:fontFamily="serif"
                android:text="@string/data_authentication"
                android:textColor="@color/blue_games"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_choose" />

            <EditText
                android:id="@+id/et_email_sign_up"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/et_passw_sign_up"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/password_login"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/et_email_sign_up"
                app:layout_constraintStart_toStartOf="@+id/et_email_sign_up"
                app:layout_constraintTop_toBottomOf="@+id/et_email_sign_up" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_person_black_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/dark_blue"
                android:fontFamily="serif"
                android:text="@string/personal_data"
                android:textColor="@color/blue_games"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/et_passw_sign_up"
                app:layout_constraintTop_toBottomOf="@+id/et_passw_sign_up" />

            <EditText
                android:id="@+id/et_person_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <EditText
                android:id="@+id/et_person_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/your_city"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/et_person_name"
                app:layout_constraintStart_toStartOf="@+id/et_person_name"
                app:layout_constraintTop_toBottomOf="@+id/et_person_name" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/birthday"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="@+id/et_person_city"
                app:layout_constraintStart_toStartOf="@+id/et_person_city"
                app:layout_constraintTop_toBottomOf="@+id/et_person_city" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:text="@string/your_level"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/et_birthday"
                app:layout_constraintTop_toBottomOf="@+id/et_birthday" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="27"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:fontFamily="serif"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/et_birthday"
                app:layout_constraintStart_toEndOf="@+id/slider"
                app:layout_constraintTop_toBottomOf="@+id/et_birthday" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="serif"
                android:text="@string/your_preference_video_game"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/slider"
                app:layout_constraintTop_toBottomOf="@+id/slider" />

            <Spinner
                android:id="@+id/spn_console"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:entries="@array/video_games"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="serif"
                android:text="@string/sex"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/spn_console"
                app:layout_constraintTop_toBottomOf="@+id/spn_console" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:verticalScrollbarPosition="defaultPosition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:text="@string/fem"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masc" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:background="@drawable/ic_wavedown_blue"
        android:gravity="center|end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:layout_marginBottom="5dp"
            android:fontFamily="serif"
            android:gravity="bottom|center"
            android:text="@string/developments"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>